--- a/pubman/pubman_presentation/src/main/webapp/audience/Audience.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/audience/Audience.jspf
@@ -41,24 +41,24 @@
 <%-- All Files --%>
 		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText value="#{lbl.AudiencePage_allFiles}" /><span class="noDisplay"> </span>
+				<h:outputText id="lblAudiencePage_allFiles" value="#{lbl.AudiencePage_allFiles}" /><span class="noDisplay"> </span>
 			</b>
 			<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLabel styleClass="quad_label" value="#{lbl.AudiencePage_numberOf} #{AudienceBean.numberOfFiles}"/>
+				<h:outputLabel id="lblNumberOfFiles" styleClass="quad_label" value="#{lbl.AudiencePage_numberOf} #{AudienceBean.numberOfFiles}"/>
 			</h:panelGroup>
 			<tr:iterator var="grantForAllFiles" id="grantListForAllFiles" value="#{AudienceBean.grantsForAllFiles}" >
 				<h:panelGroup>
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						<h:outputText value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
+						<h:outputText id="txtAudiencePage_audiencingGroup" value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
 					</b>
 					<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-						<h:selectOneMenu styleClass="quad_select" value="#{grantForAllFiles.grant.grantedTo}">
+						<h:selectOneMenu id="selUserGroups" styleClass="quad_select" value="#{grantForAllFiles.grant.grantedTo}">
 							<f:selectItems value="#{AudienceBean.userGroups}" />
 						</h:selectOneMenu>
 					</h:panelGroup>
 					<h:panelGroup styleClass="large_area0_p8 lineToolSection" >
-						<tr:commandButton action="#{AudienceBean.addGrantForAllFiles}" styleClass="min_imgBtn groupTool add" text=" " />
-						<tr:commandButton action="#{grantForAllFiles.removeGrantForAllFiles}" styleClass="min_imgBtn groupTool remove" text=" " />
+						<tr:commandButton id="btnAddGrantForAllFiles" action="#{AudienceBean.addGrantForAllFiles}" styleClass="min_imgBtn groupTool add" text=" " />
+						<tr:commandButton id="btnRemoveGrantForAllFiles" action="#{grantForAllFiles.removeGrantForAllFiles}" styleClass="min_imgBtn groupTool remove" text=" " />
 					</h:panelGroup>
 				</h:panelGroup>
 			</tr:iterator>
@@ -70,26 +70,26 @@
 			<tr:iterator var="file" id="allFiles" value="#{AudienceBean.fileList}" >
 				<h:panelGroup>
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						<h:outputText value="#{lbl.AudiencePage_file}" /><span class="noDisplay"> </span>
+						<h:outputText id="lblAudiencePage_file" value="#{lbl.AudiencePage_file}" /><span class="noDisplay"> </span>
 					</b>
 					<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-						<tr:goLink targetFrame="." destination="#{AudienceBean.fwUrl}/ir/#{AudienceBean.itemPattern}/components/component/#{file.file.reference.objectId}/content" shortDesc="#{file.file.description}">
+						<tr:goLink id="lnkFile" targetFrame="." destination="#{AudienceBean.fwUrl}/ir/#{AudienceBean.itemPattern}/components/component/#{file.file.reference.objectId}/content" shortDesc="#{file.file.description}">
 							<h:outputText value="#{file.file.name}"/>
 						</tr:goLink>
 					</h:panelGroup>
 					<tr:iterator var="grant" id="allGrants" value="#{file.grantList}" >
 						<h:panelGroup>
 							<b class="xLarge_area0_p8 endline labelLine clear">
-								<h:outputText value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
+								<h:outputText id="lblAudiencePage_audiencingGroup" value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
 							</b>
 							<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-								<h:selectOneMenu styleClass="quad_select" value="#{grant.grant.grantedTo}">
+								<h:selectOneMenu id="selUserGroups" styleClass="quad_select" value="#{grant.grant.grantedTo}">
 									<f:selectItems value="#{AudienceBean.userGroups}" />
 								</h:selectOneMenu>
 							</h:panelGroup>
 							<h:panelGroup styleClass="large_area0_p8 lineToolSection">
-								<tr:commandButton action="#{file.addGrant}" styleClass="min_imgBtn groupTool add" text=" " />
-								<tr:commandButton action="#{grant.remove}" styleClass="min_imgBtn groupTool remove" text=" " />
+								<tr:commandButton id="btnAddGrant" action="#{file.addGrant}" styleClass="min_imgBtn groupTool add" text=" " />
+								<tr:commandButton id="btnRemoveGrant" action="#{grant.remove}" styleClass="min_imgBtn groupTool remove" text=" " />
 							</h:panelGroup>
 						</h:panelGroup>
 					</tr:iterator>
