--- a/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
@@ -64,8 +64,8 @@
  			<f:selectItem itemValue="100" itemLabel="100"></f:selectItem>
  			<f:selectItem itemValue="250" itemLabel="250"></f:selectItem>
  		</h:selectOneMenu>
-		<h:commandButton title="#{tip.list_btGo}" styleClass="xTiny_txtBtn paginatorFallbackGoBtn hiddenElementsNumberChangedButton"  value="#{lbl.list_btGo}"  action="#{PubItemListSessionBean.changeElementsPerPageTop}"/>
- 		<h:outputLabel for="extSelectTop" styleClass="free_label hitsLabel" value=" #{lbl.ItemList_ObjectsPerPage}" />
+		<h:commandButton id="btnChangeElementsPerPageTop" title="#{tip.list_btGo}" styleClass="xTiny_txtBtn paginatorFallbackGoBtn hiddenElementsNumberChangedButton"  value="#{lbl.list_btGo}"  action="#{PubItemListSessionBean.changeElementsPerPageTop}"/>
+ 		<h:outputLabel id="lblItemList_ObjectsPerPage" for="extSelectTop" styleClass="free_label hitsLabel" value=" #{lbl.ItemList_ObjectsPerPage}" />
  	</div>
 
  	<div class="small_marginLExcl pageBrowser">
@@ -144,11 +144,11 @@
  					<h:panelGroup styleClass="big_imgArea statusIcon releasedItem" rendered="#{item.isStateReleased and !item.isStateWithdrawn}" />
  					<h:panelGroup styleClass="big_imgArea statusIcon inRevisionItem" rendered="#{item.isStateInRevision}" />
 					<span class="noDisplay">(</span>
- 					<h:outputLabel styleClass="medium_label endline" rendered="#{item.isStateWithdrawn}">
- 						<h:outputText id="lblItemPublicState" value="#{item.itemPublicState}" />
+ 					<h:outputLabel id="lblItemPublicState" styleClass="medium_label endline" rendered="#{item.isStateWithdrawn}">
+ 						<h:outputText value="#{item.itemPublicState}" />
  					</h:outputLabel>
- 					<h:outputLabel styleClass="medium_label endline" rendered="#{!item.isStateWithdrawn}">
- 						<h:outputText id="lblItemState" value="#{item.itemState}" />
+ 					<h:outputLabel id="lblItemState" styleClass="medium_label endline" rendered="#{!item.isStateWithdrawn}">
+ 						<h:outputText value="#{item.itemState}" />
  					</h:outputLabel>
  					<span class="noDisplay">)</span>
  				</span>
@@ -185,146 +185,33 @@
  			<f:selectItem itemValue="100" itemLabel="100"></f:selectItem>
  			<f:selectItem itemValue="250" itemLabel="250"></f:selectItem>
  		</h:selectOneMenu>
-		<h:commandButton title="#{tip.list_btGo}" styleClass="xTiny_txtBtn paginatorFallbackGoBtn hiddenElementsNumberChangedButton"  value="#{lbl.list_btGo}"  action="#{PubItemListSessionBean.changeElementsPerPageBottom}"/>
- 		<h:outputLabel for="extSelectBottom" styleClass="free_label hitsLabel" value=" #{lbl.ItemList_ObjectsPerPage}" />
+		<h:commandButton id="btnChangeElementsPerPageBottom" title="#{tip.list_btGo}" styleClass="xTiny_txtBtn paginatorFallbackGoBtn hiddenElementsNumberChangedButton"  value="#{lbl.list_btGo}"  action="#{PubItemListSessionBean.changeElementsPerPageBottom}"/>
+ 		<h:outputLabel id="lblItemList_ObjectsPerPageBottom" for="extSelectBottom" styleClass="free_label hitsLabel" value=" #{lbl.ItemList_ObjectsPerPage}" />
  	</div>
 
  	<div class="small_marginLExcl pageBrowser">
  		<label class="noDisplay pageLabel"><h:outputText value="#{lbl.List_lblPage}"/></label>
- 		<tr:goButton styleClass="min_imgBtn skipToFirst" text=" " shortDesc="#{lbl.ItemList_Results} 1 - #{PubItemListSessionBean.partListSize}" disabled="#{PubItemListSessionBean.currentPageNumber == 1}" destination="#{PubItemListSessionBean.linkForFirstPage}"/>
- 		<tr:goButton styleClass="backward" text="#{lbl.List_lkPrevious}" shortDesc="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset + 1 -PubItemListSessionBean.elementsPerPage} - #{PubItemListSessionBean.offset}" disabled="#{PubItemListSessionBean.currentPageNumber == 1}" destination="#{PubItemListSessionBean.linkForPreviousPage}"/>
+ 		<tr:goButton id="btPartListSizeBottom" styleClass="min_imgBtn skipToFirst" text=" " shortDesc="#{lbl.ItemList_Results} 1 - #{PubItemListSessionBean.partListSize}" disabled="#{PubItemListSessionBean.currentPageNumber == 1}" destination="#{PubItemListSessionBean.linkForFirstPage}"/>
+ 		<tr:goButton id="btList_lkPreviousBottom" styleClass="backward" text="#{lbl.List_lkPrevious}" shortDesc="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset + 1 -PubItemListSessionBean.elementsPerPage} - #{PubItemListSessionBean.offset}" disabled="#{PubItemListSessionBean.currentPageNumber == 1}" destination="#{PubItemListSessionBean.linkForPreviousPage}"/>
  		<h:panelGroup styleClass="seperator" />
  		<tr:iterator id="paginator2" var="paginatorPage" value="#{PubItemListSessionBean.paginatorPages}" first="#{PubItemListSessionBean.firstPaginatorPageNumber - 1}" rows="7">
  	
- 			<tr:goButton styleClass="xSmall_txtBtn" text="#{paginatorPage.number}" shortDesc="#{lbl.ItemList_Results} #{(paginatorPage.number-1) * PubItemListSessionBean.elementsPerPage +1} -  #{paginatorPage.number*PubItemListSessionBean.elementsPerPage}" destination="#{paginatorPage.link}" rendered="#{!(paginatorPage.number == PubItemListSessionBean.currentPageNumber)}"/>
- 			<tr:goButton styleClass="xSmall_txtBtn actual" text="#{paginatorPage.number}" shortDesc="#{lbl.ItemList_Results} #{(paginatorPage.number-1) * PubItemListSessionBean.elementsPerPage +1} -  #{paginatorPage.number*PubItemListSessionBean.elementsPerPage}" disabled="true" rendered="#{paginatorPage.number == PubItemListSessionBean.currentPageNumber}"/>
+ 			<tr:goButton id="btPageNumber1Bottom" styleClass="xSmall_txtBtn" text="#{paginatorPage.number}" shortDesc="#{lbl.ItemList_Results} #{(paginatorPage.number-1) * PubItemListSessionBean.elementsPerPage +1} -  #{paginatorPage.number*PubItemListSessionBean.elementsPerPage}" destination="#{paginatorPage.link}" rendered="#{!(paginatorPage.number == PubItemListSessionBean.currentPageNumber)}"/>
+ 			<tr:goButton id="btPageNumber2Bottom" styleClass="xSmall_txtBtn actual" text="#{paginatorPage.number}" shortDesc="#{lbl.ItemList_Results} #{(paginatorPage.number-1) * PubItemListSessionBean.elementsPerPage +1} -  #{paginatorPage.number*PubItemListSessionBean.elementsPerPage}" disabled="true" rendered="#{paginatorPage.number == PubItemListSessionBean.currentPageNumber}"/>
  			<h:panelGroup styleClass="seperator" />
  		
  		</tr:iterator>
- 		<tr:goButton styleClass="forward" text="#{tip.List_lkNext}" shortDesc="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset + 1 +PubItemListSessionBean.elementsPerPage} -  #{PubItemListSessionBean.offset + 1 + 2*PubItemListSessionBean.elementsPerPage}" disabled="#{PubItemListSessionBean.currentPageNumber == PubItemListSessionBean.paginatorPageSize}" destination="#{PubItemListSessionBean.linkForNextPage}"/>
- 		<tr:goButton styleClass="min_imgBtn skipToLast" text=" " shortDesc="#{lbl.ItemList_Results} #{((PubItemListSessionBean.paginatorPageSize-1) * PubItemListSessionBean.elementsPerPage + 1)} - #{PubItemListSessionBean.totalNumberOfElements}" disabled="#{PubItemListSessionBean.currentPageNumber == PubItemListSessionBean.paginatorPageSize}" destination="#{PubItemListSessionBean.linkForLastPage}"/>
+ 		<tr:goButton id="btList_lkNextBottom" styleClass="forward" text="#{tip.List_lkNext}" shortDesc="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset + 1 +PubItemListSessionBean.elementsPerPage} -  #{PubItemListSessionBean.offset + 1 + 2*PubItemListSessionBean.elementsPerPage}" disabled="#{PubItemListSessionBean.currentPageNumber == PubItemListSessionBean.paginatorPageSize}" destination="#{PubItemListSessionBean.linkForNextPage}"/>
+ 		<tr:goButton id="btLinkForLastPageBottom" styleClass="min_imgBtn skipToLast" text=" " shortDesc="#{lbl.ItemList_Results} #{((PubItemListSessionBean.paginatorPageSize-1) * PubItemListSessionBean.elementsPerPage + 1)} - #{PubItemListSessionBean.totalNumberOfElements}" disabled="#{PubItemListSessionBean.currentPageNumber == PubItemListSessionBean.paginatorPageSize}" destination="#{PubItemListSessionBean.linkForLastPage}"/>
  	</div>
 
 	<div class="gotoBox">
  		<label class="free_label gotoLabel"><h:outputText value="#{lbl.List_lblGoToPage}"/></label>
- 		<h:inputText styleClass="tiny_txtInput" value="#{PubItemListSessionBean.goToPageBottom}"/>
- 		<h:outputLabel styleClass="free_label" value="#{lbl.ItemList_of} " />
- 		<h:outputLabel styleClass="free_label" value="#{PubItemListSessionBean.paginatorPageSize}" />
- 		<h:commandButton styleClass="xTiny_txtBtn paginatorFallbackGoBtn" value="#{lbl.List_btGo}" title="#{lbl.List_btGo}" action="#{PubItemListSessionBean.goToPageBottom}"/>
+ 		<h:inputText id="inpGoToPageBottom" styleClass="tiny_txtInput" value="#{PubItemListSessionBean.goToPageBottom}"/>
+ 		<h:outputLabel id="lblItemList_ofBottom" styleClass="free_label" value="#{lbl.ItemList_of} " />
+ 		<h:outputLabel id="lblpaginatorPageSizeBottom" styleClass="free_label" value="#{PubItemListSessionBean.paginatorPageSize}" />
+ 		<h:commandButton id="btnGoToPageBottom" styleClass="xTiny_txtBtn paginatorFallbackGoBtn" value="#{lbl.List_btGo}" title="#{lbl.List_btGo}" action="#{PubItemListSessionBean.goToPageBottom}"/>
  	</div>
 
 </div>
  </f:subview>
- 
- 
-<%-- 
-<%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
-<%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
-<%@ taglib uri="http://www.escidoc.de/jsf" prefix="e" %>
-<%@ taglib uri="http://myfaces.apache.org/trinidad" prefix="tr" %>
-<div>
-	<f:subview id="list">
-		<div class="paginator">
-			<h:panelGroup layout="block" styleClass="paginatorTop floatbox">
-				
-				<!-- Menu for items per page selection -->
-				<div class="showItemsMenu floatbox parentElementsPerPageDiv">
-					
-					<h:outputText value="#{lbl.ItemList_Show} "/>
-					
-					<h:selectOneMenu value="#{PubItemListSessionBean.elementsPerPage}" onchange="$(this).siblings('.hiddenElementsNumberChangedButton').click();">
-						<f:selectItems value="#{PubItemListSessionBean.elementsPerPageSelectItems}"/>
-					</h:selectOneMenu>
-					<h:commandButton styleClass="hiddenElementsNumberChangedButton"  style="visibility:hidden;" value=" "  action="#{PubItemListSessionBean.redirect}"/>
-					<h:outputText value=" #{lbl.ItemList_ObjectsPerPage}"/>
-					
-				</div>
-				
-				<!-- Label -Result x - x of xxxx -->
-				<h:panelGroup styleClass="paginatorResultLabel" rendered = "#{PubItemListSessionBean.partListSize > 0}">
-					<h:outputText value="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset} - #{PubItemListSessionBean.offset + PubItemListSessionBean.partListSize - 1} #{lbl.ItemList_of} #{PubItemListSessionBean.completeListSize}"/>
-				</h:panelGroup>
-				
-				<!-- Paginator page control elements -->
-				<div class="paginatorControls">
-					
-					<tr:goButton text="|<" shortDesc="#{lbl.ItemList_Results} 1 - #{PubItemListSessionBean.partListSize}" disabled="#{PubItemListSessionBean.currentPageNumber == 1}" destination="#{PubItemListSessionBean.linkForFirstPage}"/>
-					<tr:goButton text="<" shortDesc="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset-PubItemListSessionBean.elementsPerPage} - #{PubItemListSessionBean.offset-1}" disabled="#{PubItemListSessionBean.currentPageNumber == 1}" destination="#{PubItemListSessionBean.linkForPreviousPage}"/>
-					
-					<tr:iterator id="paginator" var="paginatorPage" value="#{PubItemListSessionBean.paginatorPages}" first="#{PubItemListSessionBean.firstPaginatorPageNumber - 1}" rows="10">
-						<tr:goButton text="#{paginatorPage.number}" shortDesc="#{lbl.ItemList_Results} #{(paginatorPage.number-1) * PubItemListSessionBean.elementsPerPage +1} -  #{paginatorPage.number*PubItemListSessionBean.elementsPerPage}" destination="#{paginatorPage.link}" rendered="#{!(paginatorPage.number == PubItemListSessionBean.currentPageNumber)}"/>
-						<tr:goButton text="#{paginatorPage.number}" shortDesc="#{lbl.ItemList_Results} #{(paginatorPage.number-1) * PubItemListSessionBean.elementsPerPage +1} -  #{paginatorPage.number*PubItemListSessionBean.elementsPerPage}" disabled="true" styleClass="disabled" rendered="#{paginatorPage.number == PubItemListSessionBean.currentPageNumber}"/>
-					</tr:iterator>
-					<tr:goButton text=">" shortDesc="#{lbl.ItemList_Results} #{PubItemListSessionBean.offset+PubItemListSessionBean.elementsPerPage} -  #{PubItemListSessionBean.offset + 2*PubItemListSessionBean.elementsPerPage}" disabled="#{PubItemListSessionBean.currentPageNumber == PubItemListSessionBean.paginatorPageSize}" destination="#{PubItemListSessionBean.linkForNextPage}"/>
-					<tr:goButton text=">|" shortDesc="#{lbl.ItemList_Results} #{((PubItemListSessionBean.paginatorPageSize-1) * PubItemListSessionBean.elementsPerPage + 1)} - #{PubItemListSessionBean.completeListSize}" disabled="#{PubItemListSessionBean.currentPageNumber == PubItemListSessionBean.paginatorPageSize}" destination="#{PubItemListSessionBean.linkForLastPage}"/>
-				
-				</div>
-				
-			</h:panelGroup>
-			<div class="displayControls"></div>
-
-
-<h:panelGroup layout="block" styleClass="listHeader darker floatbox">
-				<div class="listHeaderSort parentSortingDiv">
-					<h:outputLabel for="sortBy" value="#{lbl.ItemList_SortBy}"/>
-					
-					<h:selectOneMenu value="#{PubItemListSessionBean.selectedSortBy}" id="sortBy" onchange="$(this).siblings('.hiddenSortByChangedButton').click();" >
-						<f:selectItems value="#{PubItemListSessionBean.sortBySelectItems}" />
-					</h:selectOneMenu>
-					<h:commandButton styleClass="hiddenSortByChangedButton"  style="visibility:hidden;" value=" "  action="#{PubItemListSessionBean.redirect}"/>
-							
-				
-					<h:outputLabel styleClass="rightSpace" for="sortOrderAsc" value="#{lbl.ItemList_SortOrderAscending}" rendered="#{PubItemListSessionBean.isAscending}"/>
-					<h:outputLabel styleClass="rightSpace" for="sortOrderDesc" value="#{lbl.ItemList_SortOrderDescending}" rendered="#{!PubItemListSessionBean.isAscending}"/>
-					
-					<h:commandButton styleClass="rightSpace topSpace5" id="sortOrderAsc" image="./resources/escidoc-css/images/ascending.gif" value=" " rendered="#{PubItemListSessionBean.isAscending}" immediate="true" actionListener="#{PubItemListSessionBean.changeSortOrder}"/>
-					<h:commandButton styleClass="rightSpace topSpace5" id="sortOrderDesc" image="./resources/escidoc-css/images/descending.gif" value=" " rendered="#{!PubItemListSessionBean.isAscending}" immediate="true" actionListener="#{PubItemListSessionBean.changeSortOrder}"/>
-					
-				</div>
-				
-				<h:panelGroup layout="block" styleClass="displayControls listHeaderControls" rendered="#{!ItemListSessionBean.isRevisionView}">
-					<h:outputLabel value="#{lbl.ItemList_Details}"/>
-
-					<h:commandButton image="images/short_view_item.gif" actionListener="#{ItemListSessionBean.switchToShortView}"/>
-					<h:commandButton image="images/medium_view_item.jpg" actionListener="#{ItemListSessionBean.switchToMediumView}"/>
-
-				</h:panelGroup>
-			</h:panelGroup>
-
-			<h:dataTable id="listtable" var="item" value="#{PubItemListSessionBean.currentPartList}">
-				<h:column>
-					<h:panelGroup layout="block" styleClass="listItemHeader dark">
-						<div class="listItemHeaderTitle">
-							<h:selectBooleanCheckbox value="#{item.selected}" immediate="true" valueChangeListener="#{item.select}" rendered="#{item.showCheckbox}"/>
-							<h:outputLink value="#{item.link}">
-								<h:outputText value="#{item.shortTitle}"/>
-							</h:outputLink>
-						</div>
-						<h:panelGroup rendered="#{ItemListSessionBean.isRevisionView and item.latestRelease.modificationDate != null and item.latestRelease.modificationDate != ''}">
-							<div class="listItemHeaderViews">
-								<h:outputText value="#{lbl.ViewItemRevisions_lblReleaseDate} #{item.formattedLatestReleaseModificationDate}"/>
-							</div>
-						</h:panelGroup>
-						<h:panelGroup rendered="#{!ItemListSessionBean.isRevisionView}">
-							<div class="listItemHeaderViews">
-								<h:commandButton image="../images/short_view_item.gif" immediate="true" action="#{item.switchToShortView}"/>
-								<h:commandButton image="../images/medium_view_item.jpg" immediate="true" action="#{item.switchToMediumView}"/>
-							</div>
-						</h:panelGroup>
-						
-					</h:panelGroup>
-					<br/>
-					<h:panelGroup rendered="#{item.shortView}">
-						<jsp:directive.include file="../viewItem/ViewItemShort.jspf"/>
-					</h:panelGroup>
-					<h:panelGroup rendered="#{item.mediumView}">
-						<jsp:directive.include file="../viewItem/ViewItemMedium.jspf"/>
-					</h:panelGroup>
-				</h:column>
-			</h:dataTable>
-
-		</div>
-		
-	</f:subview>
-</div>
---%>
